--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
     <title>Hangout-webVR</title>
+
   </head>
   <body>
     <div id="sceneContainer" style="height: 100%; width: 100%"></div>
+    <div>
+    </div>
   </body>
 </html>
